HRTOOLS-174: Кандидаты. Не корректное отображение списка кандидатов при скролле и сортировке (#130)
